# schwab-mcp

./: .deploy-trigger  .env.example  .gitignore  CHANGELOG.md  NOTICE  README.md  amazon-affiliate-warmup.html  auth.py  config.py  diagnose_coldstart.py  diagnose_operator_creds.py  fastmcp.json  infographic.py  models.py  oauth_flow.py  pyproject.toml  schwab_client.py  server.json  server.py  settings.py  vault.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  diag-app-token.yml
notes/: stale-credential-ux.md
tests/: test_account.py  test_auth.py  test_market.py  test_oauth_flow.py  test_options.py  test_schwab_client.py  test_server.py  test_vault.py  test_version_consistency.py
tools/: account.py  market.py  options.py
