[project]
name = "schwab-mcp"
version = "0.8.5"
description = "Multi-tenant FastMCP server for Charles Schwab brokerage data, monetized via DPYC Tollbooth"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tollbooth-dpyc[nostr]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[tool.setuptools]
py-modules = ["server", "settings", "models", "vault", "schwab_client", "oauth_flow"]
packages = ["tools", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
